--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -21,6 +21,23 @@
     p {
         color: $text-color-dark;
         font-size: 1.3rem;
+        margin-bottom: 20px;
+    }
+
+    .play-again-btn {
+        background: $primary-color;
+        color: white;
+        border: none;
+        padding: 10px 25px;
+        font-size: 1.1rem;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+        font-weight: bold;
+
+        &:hover {
+            background: $secondary-color;
+        }
     }
 }
 
