--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,6 +3,7 @@
 body {
     font-family: $font-stack;
     background: $bg-color;
+    color: $text-color-dark;
     min-height: 100vh;
     display: flex;
     justify-content: center;
