--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,5 +1,7 @@
 @use 'variables' as *;
 
+
+
 .container {
     max-width: 800px;
     width: 100%;
@@ -62,7 +64,7 @@
     
     @media (max-width: 600px) {
         width: 100%;
-        order: 3; // Move below buttons on mobile if needed
+        order: 3;
     }
 
     &.glow-green {
@@ -79,7 +81,7 @@
 #timer-bar {
     height: 100%;
     width: 100%;
-    background-color: #48bb78; // Green
+    background-color: #48bb78;
     transition: width 1s linear, background-color 1s linear;
     border-radius: 10px;
 }
