--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -31,12 +31,12 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border-radius: 15px; 
-        font-size: 3.5rem; 
+        border-radius: $border-radius-lg; 
+        font-size: $font-size-6xl; 
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 
         @media (max-width: 600px) {
-            font-size: 2.5rem;
+            font-size: $font-size-4xl;
         }
     }
 
