--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,7 +2,8 @@
 
 body {
     font-family: $font-stack;
-    background: $bg-color;
+    background: url('/assets/images/bamboo-forest-bg.jpg') no-repeat center center fixed;
+    background-size: cover;
     color: $text-color-dark;
     min-height: 100vh;
     display: flex;
