--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -43,3 +43,6 @@ $border-radius-md: 10px;
 $border-radius-lg: 15px;
 $border-radius-xl: 20px;
 $border-radius-xxl: 30px;
+
+// Breakpoints
+$mobile: 600px;
