--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -35,7 +35,7 @@
         font-size: $font-size-6xl; 
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 
-        @media (max-width: 600px) {
+        @media (max-width: $mobile) {
             font-size: $font-size-4xl;
         }
     }
